fixed layout bug in projects

--- a/core/static/core/less/tempora.less
+++ b/core/static/core/less/tempora.less
@@ -975,8 +975,8 @@ body {
 	}
 
 	h6 {
-		font-size: 18px;
-		font-weight: 600;
+		font-size: 16px;
+		font-weight: 400;
 		color: @theme-primary; 
 		margin-top: 5px;
 	}
